# clinical-nlp-ai-platform

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
api/: serve.py
clinical_nlp_ai_platform/: __init__.py  cli.py  deidentifier.py  entity_extraction.py  icd10.py  keywords.py  pipeline.py  schemas.py  section_splitter.py  sentiment.py  tokenizer.py  topics.py  word_cloud.py
config/: model_config.yaml
data/: sample_note.txt
models/ner/: clinical_ner_model.py  entity_linker.py
models/sentiment/: aspect_sentiment.py
preprocessing/: deidentifier.py  section_splitter.py  tokenizer.py
tests/: test_pipeline.py
visualization/: topic_radar.py  word_cloud.py
