[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-nlp-ai-platform"
version = "0.1.0"
description = "Clinical NLP pipeline for de-identification, entity extraction, sentiment, keywords, and ICD-10 suggestions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sai Teja Bandaru" }
]
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "uvicorn>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
clinical-nlp = "clinical_nlp_ai_platform.cli:main"

[tool.setuptools.packages.find]
include = ["clinical_nlp_ai_platform*"]

